--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <div class="container">
       <h1>Weather App</h1>
-      <input type="text" id="cityInput" placeholder="Enter city name" />
+      <input type="text" id="cityinput" placeholder="enter city name" />
       <button onclick="getWeather()">Get Weather</button>
-      <div class="weather-card" id="weatherCard">
-        <h2 id="cityName"></h2>
+      <div class="weather-card" id="weathercard">
+        <h2 id="cityname"></h2>
         <p id="temperature"></p>
         <p id="description"></p>
       </div>
